samples/_failures_safe/1761282613_bcc58a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80ae0ccc.c: In function ‘main’:
./samples/SAFE/__tmp_80ae0ccc.c:142:23: error: expected ‘)’ at end of input
  142 |     print_matrix(&mat1
      |                 ~     ^
      |                       )
./samples/SAFE/__tmp_80ae0ccc.c:142:5: error: expected declaration or statement at end of input
  142 |     print_matrix(&mat1
      |     ^~~~~~~~~~~~
